# multiscore-personality-backend

./: .env  .gitignore  Dockerfile  Procfile  README.md  deployment.sh  heroku.sh  pyproject.toml  render.yaml  requirements.txt  test.db
app/: admin.py  main.py  msp-key-pair.pem  requirements.txt
app/api/v1/: auth.py  decision_tree.py  payment.py  questions.py  scoring.py  stripe_webhook.py
app/core/: auth.py  config.py  database.py  email.py  response.py  scoring.py  stripe_service.py  utils.py
app/models/: basemodels.py  question.py  scoring.py  user.py
app/static/: questions.json  results.json
app/tests/: test_questions.py  test_scoring.py
