[tool.poetry]
name = "multiscore-personality"
version = "0.1.0"
description = ""
authors = ["warismstf <warismstf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
