[tool.poetry]
name = "multiscore-personality"
version = "0.1.0"
description = ""
authors = ["warismstf <warismstf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"
pydantic = {extras = ["email"], version = "^2.10.5"}
sqlalchemy = "^2.0.37"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
jwt = "^1.3.1"
requests = "^2.32.3"
sib-api-v3-sdk = "^7.6.0"
bcrypt = "3.2.0"
sendgrid = "^6.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
